# libdoc

./: .gitmodules  COPYING  ChangeLog  README.md  autogen.sh  configure.ac
include/: libdoc.h  mswordtype.h
include/libdoc/: apply_properties.h  direct_paragraph_formatting.h  doc.h  operands.h  retrieving_text.h  sprm.h
src/: Makefile.am  apply_properties.c  cell_boundaries.c  direct_character_formatting.c  direct_paragraph_formatting.c  doc.c  doc2txt.c  doc_parse.c  doc_parse2.c  paragraph_boundaries.c  prl.c  retrieving_text.c  row_boundaries.c  style_properties.c
